$Id: CHANGELOG,v 1.500.2.2 2000/02/02 07:18:09 itojun Exp $

<200002>
Wed Feb  2 16:16:01 JST 2000  itojun@iijlab.net
	* bsdi4/sys: fix ifindex manipulation to be compatible with KAME.
	  from kato@wide.ad.jp.  (in NAT, ppp and ATM code)

Wed Feb  2 12:55:44 JST 2000  itojun@iijlab.net
	* kame/rtadvd: router renumbering input needs to be explicitly
	  enabled with command line option (-R).  this is for security issue
	  in router renumbering protocol - it requires use of IPv6 IPsec
	  over site-local multicast.  (IPsec issue should be improved)

<200001>
Mon Jan 31 00:42:47 JST 2000  itojun@iijlab.net
	* netbsd/pkgsrc/mail/{sendmail,smtpfeed}: upgrade smtpfeed to 1.04.
	  synchronize with latest NetBSD pkgsrc.

Sun Jan 30 15:30:14 JST 2000  itojun@iijlab.net
	* kame/libinet6/rcmd.c: fix behavior on non-IPv6 node.  From shin.
	* kame/libinet6/getaddrinfo: fix AI_ADDRCONFIG concern when
	  getipnodebyname() is used as backend.
	* netbsd/pkgsrc/net/echoping: echoping 2.2.0 with IPv6 support.

Sat Jan 29 16:20:31 JST 2000  itojun@iijlab.net
	* kame/sys/netinet6/ipsec.c (and other ipsec items):
	  cleanup include file dependencies and namespace polution, like
	  prototypes and #define KERNEL.
	* kame/sys/netinet6/ip6_input.c: fix ip6_savecontrol() to be friendly
	  with m_pulldown() environment.  now it does not modify mbuf chain
	  at all.  therefore, calling ip6_savecontrol() will not invalidate
	  pointers into mbuf chain (like "uh" in udp6_input).

Fri Jan 28 15:37:46 JST 2000  itojun@iijlab.net
	* kame/sys/netinet6/ipsec.c, kame/sys/netkey/key.c,
	  */sys/netinet{,6}/ip{,6}_input.c: pass policy message buffer length
	  down.  this is to avoid key_msg2sp() from making buffer overrun
	  on invalid input from the userland.

2000-01-28  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/tcp6_usrreq.c (tcp6_usrreq):
	* {bsdi4,netbsd,openbsd}/sys/netinet/tcp_usrreq.c (tcp_usrreq):
	* freebsd3/sys/netinet/tcp_usrreq.c (tcp_usr_rcvd):