@@ -931,19 +931,9 @@ smc91cxx_read(sc)
 	 */
 	if ((ifp->if_flags & IFF_PROMISC) != 0) {
 		/*
-		 * Drop multicast/broadcast packet looped back from myself.
+		 * Drop packet looped back from myself.
 		 */
-		if ((eh->ether_dhost[0] & 1) == 1 &&	/* mcast || bcast */
-		    ether_cmp(eh->ether_shost, LLADDR(ifp->if_sadl)) == 0) {
-			m_freem(m);
-			goto out;
-		}
-
-		/*
-		 * If this is unicast and not for me, drop it.
-		 */
-		if ((eh->ether_dhost[0] & 1) == 0 &&	/* !mcast and !bcast */
-		    ether_cmp(eh->ether_dhost, LLADDR(ifp->if_sadl)) != 0) {
+		if (ether_cmp(eh->ether_shost, LLADDR(ifp->if_sadl)) == 0) {
 			m_freem(m);
 			goto out;
 		}
@@ -956,6 +946,15 @@ smc91cxx_read(sc)
 	if (ifp->if_bpf)
 		bpf_mtap(ifp->if_bpf, m);
 #endif
+
+	/*
+	 * If this is unicast and not for me, drop it.
+	 */
+	if ((eh->ether_dhost[0] & 1) == 0 &&	/* !mcast and !bcast */
+	    ether_cmp(eh->ether_dhost, LLADDR(ifp->if_sadl)) != 0) {
+		m_freem(m);
+		goto out;
+	}
 
 	/*
 	 * Strip the ethernet header.
