@@ -1,6 +1,9 @@
-$Id: CHANGELOG,v 1.500.2.2 2000/02/02 07:18:09 itojun Exp $
+$Id: CHANGELOG,v 1.500.2.3 2000/02/04 14:45:27 itojun Exp $
 
 <200002>
+Fri Feb  4 01:20:15 JST 2000  itojun@iijlab.net
+	* netbsd/sys/dev/ic/smc91cxx.c: fix promisc mode for sm* interface.
+
 Wed Feb  2 16:16:01 JST 2000  itojun@iijlab.net
 	* bsdi4/sys: fix ifindex manipulation to be compatible with KAME.
 	  from kato@wide.ad.jp.  (in NAT, ppp and ATM code)
